More UI changes and fixes, started working on GeoJSON generation on the back-end to supplement the heatmap.
